adding all files

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../src/sytle.css">
 </head>
 <body>
-    <P>This is my about us pages</P> 
+    <p>This is my about us pages</p> 
     <nav>
         <ul><li><a href="../index.html">Home page</a></li>
         <li><a href="aboutus.html">This is about us page</a></li>
